# ipc-sim-from-scratch

./: CMakeLists.txt  README.md
include/: DOFMap.h  Exporter.h  InertiaEnergy.h  Mesh.h  PCGSolver.h  State.h  TimeIntegrator.h  utils.h
src/: DOFMap.cpp  Exporter.cpp  InertiaEnergy.cpp  Mesh.cpp  PCGSolver.cpp  State.cpp  TimeIntegrator.cpp  main.cpp  utils.cpp
tests/: test_.cpp  test_dofmap.cpp  test_energies.cpp  test_pcg.cpp  test_timeintegrator.cpp  test_utils.cpp  testing_utils.h
